--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
+    "@types/react": "^18.3.11"
   }
 }
